--- a/ourservices.html
+++ b/ourservices.html
@@ -54,7 +54,7 @@
               <a class="nav-link" href="./contact.html">Contact us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Products</a>
+              <a class="nav-link" href="./products.html">Products</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./ourservices.html">Our Services</a>
@@ -91,15 +91,13 @@
         <ul>
           <li>
             <h5>
-              <a style="text-decoration: underline" href="./index.html"
-                >Main menu</a
-              >
+              <a href="./index.html">Main menu</a>
             </h5>
           </li>
           <li><a href="./ourservices.html">Our services</a></li>
           <li><a href="./about.html">About us</a></li>
           <li><a href="./contact.html">Contact us</a></li>
-          <li><a href="#">Products</a></li>
+          <li><a href="./products.html">Products</a></li>
         </ul>
       </div>
       <!-- follow us links of social media and site credits  -->
