--- a/products.html
+++ b/products.html
@@ -9,6 +9,10 @@
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
+    <link
+      href="https://use.fontawesome.com/releases/v5.0.4/css/all.css"
+      rel="stylesheet"
+    />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Dosis&display=swap"
@@ -25,74 +29,43 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./contact.css" />
-    <title>Membrane Touch</title>
+    <link rel="stylesheet" href="./slideshow.css" />
+    <!-- <script src="./index.js"></script> -->
+    <title>Products</title>
   </head>
   <body>
-    <div class="contact-banner">
-      <nav class="navbar navbar-expand-md">
-        <a class="navbar-brand" href="./index.html">
-          <img class="logo" src="./images/mtouchlogo.jpg" alt="logo" />
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#collapsibleNavbar"
-        >
-          <img src="./images/icons8-menu.svg" alt="menu" style="height: 25px" />
-        </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="./index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./about.html">About us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./contact.html">Contact us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./products.html">Products</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./ourservices.html">Our Services</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-      <div class="contact-banner-content">
-        <h3>Contact Us</h3>
+    <nav class="navbar navbar-expand-md">
+      <a class="navbar-brand" href="./index.html">
+        <img class="logo" src="./images/mtouchlogo.jpg" alt="logo" />
+      </a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#collapsibleNavbar"
+      >
+        <img src="./images/icons8-menu.svg" alt="menu" style="height: 25px" />
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="./index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./about.html">About us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./contact.html">Contact us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./products.html">Products</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./ourservices.html">Our Services</a>
+          </li>
+        </ul>
       </div>
-    </div>
-    <div class="main-contact-details">
-      <div class="my-contacts">
-        <div class="phone contact-details">
-          <h5>Call : <span>8642093333</span></h5>
-          <h5>Call : <span>880189111</span></h5>
-        </div>
-        <div class="mail contact-details">
-          <h5>Mail : <span>membranetouch@gmail.com</span></h5>
-        </div>
-        <div class="address contact-details">
-          <h5>Address : <span>C/91, Mek Industrial Estate Mumbra</span></h5>
-        </div>
-      </div>
-
-      <div class="my-map">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3768.437558451373!2d73.02069545016754!3d19.176081886966934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7bf50d5b531f3%3A0x6dc2ea425cc32795!2sM-Touch%20Technology!5e0!3m2!1sen!2sin!4v1605876002253!5m2!1sen!2sin"
-          width="100%"
-          height="450"
-          frameborder="0"
-          style="border: 0"
-          allowfullscreen=""
-          aria-hidden="false"
-          tabindex="0"
-        ></iframe>
-      </div>
-    </div>
+    </nav>
 
     <footer class="my-footer">
       <!-- logo and description of company  -->
@@ -170,13 +143,13 @@
           </ul>
         </div>
         <!-- <div class="site-credits">
-          <p>
-            Site Credits:
-            <a href="https://www.linkedin.com/in/altamash-qureshi-732362194/"
-              ><span>Altamash Qureshi</span></a
-            >
-          </p>
-        </div> -->
+            <p>
+              Site Credits:
+              <a href="https://www.linkedin.com/in/altamash-qureshi-732362194/"
+                ><span>Altamash Qureshi</span></a
+              >
+            </p>
+          </div> -->
       </div>
     </footer>
   </body>
