our sevices added

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
             <li class="nav-item">
               <a class="nav-link" href="./contact.html">Contact us</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="./products.html">Products</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="./ourservices.html">Our Services</a>
             </li>
@@ -126,6 +126,37 @@
           <a class="next" onclick="plusSlides(3)">&#10095;</a>
         </div>
         <br />
+      </div>
+      <div class="why-choose-us-container">
+        <div class="why-choose-us-title">
+          <h2><b>Why Choose Us</b></h2>
+        </div>
+        <div class="why-choose-us-content">
+          <div class="content">
+            <img src="./images/why-icons/star.png" alt="quality" />
+            <h4><b>Good Quality</b></h4>
+            <p>
+              We are known for our good quality that we provide to our
+              customers.
+            </p>
+          </div>
+          <div class="content">
+            <img src="./images/why-icons/download-speed.png" alt="Speed" />
+            <h4><b>Speed</b></h4>
+            <p>
+              We provide our customers fast service and we complete our orders
+              ahead of time.
+            </p>
+          </div>
+          <div class="content">
+            <img src="./images/why-icons/money-bag.png" alt="Cost" />
+            <h4><b>Cost Effective</b></h4>
+            <p>
+              You can get yout work done with high quality and speed with
+              minimal cost.
+            </p>
+          </div>
+        </div>
       </div>
       <div class="our-customers-container">
         <div class="sub-heading">
