--- a/ourservices.html
+++ b/ourservices.html
@@ -53,9 +53,9 @@
             <li class="nav-item">
               <a class="nav-link" href="./contact.html">Contact us</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="./products.html">Products</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="./ourservices.html">Our Services</a>
             </li>
@@ -68,8 +68,80 @@
       </div>
     </div>
 
-    <div class="why-details"></div>
-
+    <div class="our-services-container">
+      <div class="our-service-element">
+        <img src="./images/products/color.jpg" alt="color" />
+        <div class="our-service-element-details">
+          <h5>Color and texture</h5>
+          <p>
+            The overlay could be texturised with final finishes ranging from
+            glossy to dull matt that can withstand moisture and can be designed
+            in an unlimited range of colour having a combination of texture and
+            finishes, thus enhancing visul cosmetics of the panels. Select from
+            Pantone, RAL or Differents shade cards matching systems.
+          </p>
+        </div>
+      </div>
+      <div class="our-service-element">
+        <img src="./images/products/switch legend.PNG" alt="" />
+        <div class="our-service-element-details">
+          <h5>Interchangable Switch Legend</h5>
+          <p>
+            Where pre-printed information cannot be include in the graphic
+            layers a series of pockets can be engineered between the graphic and
+            switch layers to accept additional legend stripes thus allowing
+            additional customisation.
+          </p>
+        </div>
+      </div>
+      <div class="our-service-element">
+        <img
+          src="./images/products/franke-19004324-f3d3-keypad-artwork-black-f-small-lcd-w-franke-logo.jpg"
+          alt="sub Assemblies"
+        />
+        <div class="our-service-element-details">
+          <h5>Sub Assemblies</h5>
+          <p>
+            The panel can be provided with aluminium backplate & mounting studs
+            complete with die-cut fabricated or moulded enclosures, housings as
+            per your requirements. Printed circuit boards can also be supplied,
+            as a sub-assembly with wave soldered, mounted components with
+            different types of LEDs & Connectors. Conventional Decals can also
+            be aesthetically designed to enhance your product appearance. Our
+            facilities have a solution for all your applications and
+            requirements.
+          </p>
+        </div>
+      </div>
+      <div class="our-service-element">
+        <img src="./images/products/window.jpg" alt="window" />
+        <div class="our-service-element-details">
+          <h5>Windows</h5>
+          <p>
+            For display devices, windows can be transparent for use with LCD's
+            or filtered for used with LED's Standard filters are available in
+            red , green, amber, violet & grey. With selective hard coat and or
+            anti glare coat. Electroluminescent panels for backlit display can
+            also be designed and engineered.
+          </p>
+        </div>
+      </div>
+      <div class="our-service-element">
+        <img src="./images/products/EMBOSSSEL2.jpg" alt="Emboss" />
+        <div class="our-service-element-details">
+          <h5>Embossing</h5>
+          <p>
+            Any part of panel can be embossed to add a third dimension. The type
+            of embossing depends on the application. Usually the switch areas
+            are the most commonly embossed. There are two types namely Pad and
+            Rim Type. Pad type embossing give a conventional panel appearance
+            usually having a tactile feedback and the Rim type embossing raises
+            the entire edge of the switch ensuring better switch location and
+            contact.
+          </p>
+        </div>
+      </div>
+    </div>
     <footer class="my-footer">
       <!-- logo and description of company  -->
       <div class="mtouch-footer-details">
