--- a/about.html
+++ b/about.html
@@ -53,9 +53,9 @@
             <li class="nav-item">
               <a class="nav-link" href="./contact.html">Contact us</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="./products.html">Products</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="./ourservices.html">Our Services</a>
             </li>
