--- a/contact.html
+++ b/contact.html
@@ -199,14 +199,14 @@
             </li>
           </ul>
         </div>
-        <!-- <div class="site-credits">
+        <div class="site-credits">
           <p>
             Site Credits:
             <a href="https://www.linkedin.com/in/altamash-qureshi-732362194/"
               ><span>Altamash Qureshi</span></a
             >
           </p>
-        </div> -->
+        </div>
       </div>
     </footer>
   </body>
