--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             </li>
           </ul>
         </div>
-        <!-- <div class="site-credits">
+        <div class="site-credits">
           <p>
             Site Credits:
             <a
@@ -266,7 +266,7 @@
               ><span>Altamash Qureshi</span></a
             >
           </p>
-        </div> -->
+        </div>
       </div>
     </footer>
   </body>
