--- a/ourservices.html
+++ b/ourservices.html
@@ -72,12 +72,12 @@
       <div class="our-service-element">
         <img src="./images/products/color.jpg" alt="color" />
         <div class="our-service-element-details">
-          <h5>Color and texture</h5>
+          <h5><b>Color and texture</b></h5>
           <p>
             The overlay could be texturised with final finishes ranging from
             glossy to dull matt that can withstand moisture and can be designed
             in an unlimited range of colour having a combination of texture and
-            finishes, thus enhancing visul cosmetics of the panels. Select from
+            finishes, thus enhancing visual cosmetics of the panels. Select from
             Pantone, RAL or Differents shade cards matching systems.
           </p>
         </div>
@@ -85,7 +85,7 @@
       <div class="our-service-element">
         <img src="./images/products/switch legend.PNG" alt="" />
         <div class="our-service-element-details">
-          <h5>Interchangable Switch Legend</h5>
+          <h5><b>Interchangable Switch Legend</b></h5>
           <p>
             Where pre-printed information cannot be include in the graphic
             layers a series of pockets can be engineered between the graphic and
@@ -100,7 +100,7 @@
           alt="sub Assemblies"
         />
         <div class="our-service-element-details">
-          <h5>Sub Assemblies</h5>
+          <h5><b>Sub Assemblies</b></h5>
           <p>
             The panel can be provided with aluminium backplate & mounting studs
             complete with die-cut fabricated or moulded enclosures, housings as
@@ -116,7 +116,7 @@
       <div class="our-service-element">
         <img src="./images/products/window.jpg" alt="window" />
         <div class="our-service-element-details">
-          <h5>Windows</h5>
+          <h5><b>Windows</b></h5>
           <p>
             For display devices, windows can be transparent for use with LCD's
             or filtered for used with LED's Standard filters are available in
@@ -129,7 +129,7 @@
       <div class="our-service-element">
         <img src="./images/products/EMBOSSSEL2.jpg" alt="Emboss" />
         <div class="our-service-element-details">
-          <h5>Embossing</h5>
+          <h5><b>Embossing</b></h5>
           <p>
             Any part of panel can be embossed to add a third dimension. The type
             of embossing depends on the application. Usually the switch areas
@@ -219,14 +219,14 @@
             </li>
           </ul>
         </div>
-        <!-- <div class="site-credits">
+        <div class="site-credits">
           <p>
             Site Credits:
             <a href="https://www.linkedin.com/in/altamash-qureshi-732362194/"
               ><span>Altamash Qureshi</span></a
             >
           </p>
-        </div> -->
+        </div>
       </div>
     </footer>
   </body>
