--- a/products.html
+++ b/products.html
@@ -142,14 +142,14 @@
             </li>
           </ul>
         </div>
-        <!-- <div class="site-credits">
-            <p>
-              Site Credits:
-              <a href="https://www.linkedin.com/in/altamash-qureshi-732362194/"
-                ><span>Altamash Qureshi</span></a
-              >
-            </p>
-          </div> -->
+        <div class="site-credits">
+          <p>
+            Site Credits:
+            <a href="https://www.linkedin.com/in/altamash-qureshi-732362194/"
+              ><span>Altamash Qureshi</span></a
+            >
+          </p>
+        </div>
       </div>
     </footer>
   </body>
