--- a/index.html
+++ b/index.html
@@ -208,7 +208,6 @@
           </li>
           <li><a href="./about.html">About us</a></li>
           <li><a href="./ourservices.html">Our services</a></li>
-          <li><a href="./products.html">Products</a></li>
           <li><a href="./contact.html">Contact us</a></li>
         </ul>
       </div>
@@ -250,10 +249,15 @@
               />
             </li>
             <li>
-              <img
-                src="./images/social media icons/icons8-whatsapp-48.png"
-                alt="whatsapp-icon"
-              />
+              <a
+                href="https://web.whatsapp.com/send?phone=8801891111"
+                target="_blank"
+              >
+                <img
+                  src="./images/social media icons/icons8-whatsapp-48.png"
+                  alt="whatsapp-icon"
+                />
+              </a>
             </li>
           </ul>
         </div>
@@ -268,6 +272,12 @@
           </p>
         </div>
       </div>
+      <div class="my-whatsapp">
+        <a href="https://web.whatsapp.com/send?phone=8801891111" target="_blank"
+          ><img src="./images/contacts-icon/whatsapp.svg" alt="whatsapp"
+        /></a>
+      </div>
     </footer>
   </body>
 </html>
+<!-- https://api.whatsapp.com/send?phone=8801891111 -->
