--- a/products.html
+++ b/products.html
@@ -151,6 +151,11 @@
           </p>
         </div>
       </div>
+      <div class="my-whatsapp">
+        <a href="https://web.whatsapp.com/send?phone=8801891111" target="_blank"
+          ><img src="./images/contacts-icon/whatsapp.svg" alt="whatsapp"
+        /></a>
+      </div>
     </footer>
   </body>
 </html>
