--- a/ourservices.html
+++ b/ourservices.html
@@ -169,7 +169,6 @@
           <li><a href="./ourservices.html">Our services</a></li>
           <li><a href="./about.html">About us</a></li>
           <li><a href="./contact.html">Contact us</a></li>
-          <li><a href="./products.html">Products</a></li>
         </ul>
       </div>
       <!-- follow us links of social media and site credits  -->
@@ -212,10 +211,15 @@
               />
             </li>
             <li>
-              <img
-                src="./images/social media icons/icons8-whatsapp-48.png"
-                alt="whatsapp-icon"
-              />
+              <a
+                href="https://web.whatsapp.com/send?phone=8801891111"
+                target="_blank"
+              >
+                <img
+                  src="./images/social media icons/icons8-whatsapp-48.png"
+                  alt="whatsapp-icon"
+                />
+              </a>
             </li>
           </ul>
         </div>
@@ -227,6 +231,11 @@
             >
           </p>
         </div>
+      </div>
+      <div class="my-whatsapp">
+        <a href="https://web.whatsapp.com/send?phone=8801891111" target="_blank"
+          ><img src="./images/contacts-icon/whatsapp.svg" alt="whatsapp"
+        /></a>
       </div>
     </footer>
   </body>
