more products added

--- a/contact.html
+++ b/contact.html
@@ -75,8 +75,8 @@
               alt="phone-icon"
             />
           </div>
-          <h5>Call : <span>8642093333</span></h5>
-          <h5>Call : <span>8642093333</span></h5>
+          <h5>Call : <span>+91 9833105234</span></h5>
+          <h5>Call : <span>+91 7021104615</span></h5>
         </div>
         <div class="mail contact-details">
           <div class="contact-icon" style="padding-bottom: 10px">
@@ -105,7 +105,10 @@
           </div>
           <h5>
             Address :
-            <span>C/91, Mek Industrial Estate, Mumbra Dist Thane 400612</span>
+            <span
+              >C/91, 1st floor Mek Industrial Estate, Near Post Office, Mumbra
+              Dist Thane 400612</span
+            >
           </h5>
         </div>
       </div>
@@ -161,38 +164,57 @@
           </h5>
           <ul class="social-media-list">
             <li>
-              <img
-                src="./images/social media icons/icons8-facebook-circled-48.png"
-                alt="facebook-icon"
-              />
-            </li>
-            <li>
-              <img
-                src="./images/social media icons/icons8-instagram-48.png"
-                alt="instagram-icon"
-              />
-            </li>
-            <li>
-              <img
-                src="./images/social media icons/icons8-play-button-48.png"
-                alt="youtube-icon"
-              />
-            </li>
-            <li>
-              <img
-                src="./images/social media icons/icons8-linkedin-circled-48.png"
-                alt="linkedin-icon"
-              />
-            </li>
-            <li>
-              <img
-                src="./images/social media icons/icons8-twitter-circled-48.png"
-                alt="twitter-icon"
-              />
+              <a
+                href="https://www.facebook.com/Membranetouch-100888928542254"
+                target="_blank"
+              >
+                <img
+                  src="./images/social media icons/icons8-facebook-circled-48.png"
+                  alt="facebook-icon"
+                />
+              </a>
             </li>
             <li>
               <a
-                href="https://web.whatsapp.com/send?phone=8801891111"
+                href="https://www.instagram.com/membranetouch/"
+                target="_blank"
+              >
+                <img
+                  src="./images/social media icons/icons8-instagram-48.png"
+                  alt="instagram-icon"
+                />
+              </a>
+            </li>
+            <li>
+              <a href="https://bit.ly/2HD9JMx" target="_blank">
+                <img
+                  src="./images/social media icons/icons8-play-button-48.png"
+                  alt="youtube-icon"
+                />
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com/company/70485274/"
+                target="_blank"
+              >
+                <img
+                  src="./images/social media icons/icons8-linkedin-circled-48.png"
+                  alt="linkedin-icon"
+                />
+              </a>
+            </li>
+            <li>
+              <a href="https://twitter.com/TouchMembrane" target="_blank">
+                <img
+                  src="./images/social media icons/icons8-twitter-circled-48.png"
+                  alt="twitter-icon"
+                />
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://web.whatsapp.com/send?phone=7021104615"
                 target="_blank"
               >
                 <img
@@ -213,7 +235,7 @@
         </div>
       </div>
       <div class="my-whatsapp">
-        <a href="https://web.whatsapp.com/send?phone=8801891111" target="_blank"
+        <a href="https://web.whatsapp.com/send?phone=7021104615" target="_blank"
           ><img src="./images/contacts-icon/whatsapp.svg" alt="whatsapp"
         /></a>
       </div>
