--- a/ourservices.html
+++ b/ourservices.html
@@ -181,38 +181,57 @@
           </h5>
           <ul class="social-media-list">
             <li>
-              <img
-                src="./images/social media icons/icons8-facebook-circled-48.png"
-                alt="facebook-icon"
-              />
-            </li>
-            <li>
-              <img
-                src="./images/social media icons/icons8-instagram-48.png"
-                alt="instagram-icon"
-              />
-            </li>
-            <li>
-              <img
-                src="./images/social media icons/icons8-play-button-48.png"
-                alt="youtube-icon"
-              />
-            </li>
-            <li>
-              <img
-                src="./images/social media icons/icons8-linkedin-circled-48.png"
-                alt="linkedin-icon"
-              />
-            </li>
-            <li>
-              <img
-                src="./images/social media icons/icons8-twitter-circled-48.png"
-                alt="twitter-icon"
-              />
+              <a
+                href="https://www.facebook.com/Membranetouch-100888928542254"
+                target="_blank"
+              >
+                <img
+                  src="./images/social media icons/icons8-facebook-circled-48.png"
+                  alt="facebook-icon"
+                />
+              </a>
             </li>
             <li>
               <a
-                href="https://web.whatsapp.com/send?phone=8801891111"
+                href="https://www.instagram.com/membranetouch/"
+                target="_blank"
+              >
+                <img
+                  src="./images/social media icons/icons8-instagram-48.png"
+                  alt="instagram-icon"
+                />
+              </a>
+            </li>
+            <li>
+              <a href="https://bit.ly/2HD9JMx" target="_blank">
+                <img
+                  src="./images/social media icons/icons8-play-button-48.png"
+                  alt="youtube-icon"
+                />
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com/company/70485274/"
+                target="_blank"
+              >
+                <img
+                  src="./images/social media icons/icons8-linkedin-circled-48.png"
+                  alt="linkedin-icon"
+                />
+              </a>
+            </li>
+            <li>
+              <a href="https://twitter.com/TouchMembrane" target="_blank">
+                <img
+                  src="./images/social media icons/icons8-twitter-circled-48.png"
+                  alt="twitter-icon"
+                />
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://web.whatsapp.com/send?phone=7021104615"
                 target="_blank"
               >
                 <img
@@ -233,7 +252,7 @@
         </div>
       </div>
       <div class="my-whatsapp">
-        <a href="https://web.whatsapp.com/send?phone=8801891111" target="_blank"
+        <a href="https://web.whatsapp.com/send?phone=7021104615" target="_blank"
           ><img src="./images/contacts-icon/whatsapp.svg" alt="whatsapp"
         /></a>
       </div>
