--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
           <div class="mySlides my-fade">
             <img src="./images/products/flexible-500x500.jpg" />
-            <div class="product-name"><h5>Flexible Keyboard</h5></div>
+            <div class="product-name"><h5>Membrane Flexible Keyboard</h5></div>
           </div>
 
           <div class="mySlides my-fade">
@@ -98,7 +98,7 @@
               src="./images/products/membrane keyboard PCB DESIGN DOUBLE SIDED.jpg"
             />
             <div class="product-name">
-              <h5>Membrane Keyboard PCB deisgn Double sided</h5>
+              <h5>Membrane Hybrid Keyboard</h5>
             </div>
           </div>
 
@@ -112,13 +112,30 @@
           </div>
 
           <div class="mySlides my-fade">
+            <img src="./images/products/membrane-keypad-double sided.PNG" />
+            <div class="product-name">
+              <h5>Membrane Keypad Double Sided</h5>
+            </div>
+          </div>
+
+          <div class="mySlides my-fade">
             <img src="./images/products/metal-keypad-500x500.jpg" />
             <div class="product-name"><h5>Metal Keypad</h5></div>
           </div>
 
           <div class="mySlides my-fade">
             <img src="./images/products/SA.jpg" />
-            <div class="product-name"><h5>Stickers</h5></div>
+            <div class="product-name"><h5>Membrane Label Stickers</h5></div>
+          </div>
+
+          <div class="mySlides my-fade">
+            <img src="./images/products/Domes-epoxy stickers.PNG" />
+            <div class="product-name"><h5>Domes/Epoxy Stickers</h5></div>
+          </div>
+
+          <div class="mySlides my-fade">
+            <img src="./images/products/EMBOSSSEL2.jpg" />
+            <div class="product-name"><h5>Membrane Emboss Labels</h5></div>
           </div>
 
           <!-- Next and previous buttons -->
@@ -219,38 +236,57 @@
           </h5>
           <ul class="social-media-list">
             <li>
-              <img
-                src="./images/social media icons/icons8-facebook-circled-48.png"
-                alt="facebook-icon"
-              />
-            </li>
-            <li>
-              <img
-                src="./images/social media icons/icons8-instagram-48.png"
-                alt="instagram-icon"
-              />
-            </li>
-            <li>
-              <img
-                src="./images/social media icons/icons8-play-button-48.png"
-                alt="youtube-icon"
-              />
-            </li>
-            <li>
-              <img
-                src="./images/social media icons/icons8-linkedin-circled-48.png"
-                alt="linkedin-icon"
-              />
-            </li>
-            <li>
-              <img
-                src="./images/social media icons/icons8-twitter-circled-48.png"
-                alt="twitter-icon"
-              />
+              <a
+                href="https://www.facebook.com/Membranetouch-100888928542254"
+                target="_blank"
+              >
+                <img
+                  src="./images/social media icons/icons8-facebook-circled-48.png"
+                  alt="facebook-icon"
+                />
+              </a>
             </li>
             <li>
               <a
-                href="https://web.whatsapp.com/send?phone=8801891111"
+                href="https://www.instagram.com/membranetouch/"
+                target="_blank"
+              >
+                <img
+                  src="./images/social media icons/icons8-instagram-48.png"
+                  alt="instagram-icon"
+                />
+              </a>
+            </li>
+            <li>
+              <a href="https://bit.ly/2HD9JMx" target="_blank">
+                <img
+                  src="./images/social media icons/icons8-play-button-48.png"
+                  alt="youtube-icon"
+                />
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com/company/70485274/"
+                target="_blank"
+              >
+                <img
+                  src="./images/social media icons/icons8-linkedin-circled-48.png"
+                  alt="linkedin-icon"
+                />
+              </a>
+            </li>
+            <li>
+              <a href="https://twitter.com/TouchMembrane" target="_blank">
+                <img
+                  src="./images/social media icons/icons8-twitter-circled-48.png"
+                  alt="twitter-icon"
+                />
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://web.whatsapp.com/send?phone=7021104615"
                 target="_blank"
               >
                 <img
@@ -273,7 +309,7 @@
         </div>
       </div>
       <div class="my-whatsapp">
-        <a href="https://web.whatsapp.com/send?phone=8801891111" target="_blank"
+        <a href="https://web.whatsapp.com/send?phone=7021104615" target="_blank"
           ><img src="./images/contacts-icon/whatsapp.svg" alt="whatsapp"
         /></a>
       </div>
@@ -281,3 +317,8 @@
   </body>
 </html>
 <!-- https://api.whatsapp.com/send?phone=8801891111 -->
+<!-- https://www.facebook.com/Membranetouch-100888928542254
+https://www.instagram.com/membranetouch/
+https://www.linkedin.com/company/70485274/
+https://twitter.com/TouchMembrane
+https://bit.ly/2HD9JMx -->
