--- a/about.html
+++ b/about.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./about.css" />
     <title>About us</title>
+    <link rel="shortcut icon" href="./images/mtouchlogo.jpg" />
   </head>
   <body>
     <div class="about-banner">
