--- a/ourservices.html
+++ b/ourservices.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./ourservices.css" />
     <title>Our Services</title>
+    <link rel="shortcut icon" href="./images/mtouchlogo.jpg" />
   </head>
   <body>
     <div class="why-banner">
