--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./contact.css" />
     <title>Membrane Touch</title>
+    <link rel="shortcut icon" href="./images/mtouchlogo.jpg" />
   </head>
   <body>
     <div class="contact-banner">
