--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="./slideshow.css" />
     <script src="./index.js"></script>
     <title>Membrane Touch</title>
+    <link rel="shortcut icon" href="./images/mtouchlogo.jpg" />
   </head>
   <body>
     <div class="main-content">
